--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mineflayer-pipeline",
   "version": "1.0.0",
-  "main": "lib/index.js",
+  "scripts": {
+    "simple": "node examples/simple-operators.js",
+    "fisherman": "node examples/fisherman.js"
+  },
+  "main": "index.js",
   "repository": "https://github.com/RealPeha/mineflayer-pipeline.git",
   "author": "RealPeha <real.peha@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "minecraft-data": "^2.61.0",
-    "mineflayer": "^2.22.0"
-  }
+  "license": "MIT"
 }
